# end-to-end-mlops-system

./: .gitignore  README.md  pyproject.toml
cloudformation/: continous-training.yaml  metaflow-cfn-template.yml  mlflow-server3.yaml
core/deployment/: deployment_utility.py
core/monitoring/: labelling_utility.py  monitoring_utility.py  retraining_utility.py  traffic_utility.py
core/training/: etl.py  training_utility.py
flows/: deployment_flow.py  monitoring_flow.py  retraining_flow.py  traffic_flow.py  training_flow.py
shared/: mlflow_config.py  model.py  utils.py
